# crucible

./: .geminiignore  .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  roadmap.md
data/: DATA.md  __init__.py  coverage.py  database.py  ingest.py  models.py  schemas.py  visualize.py
data/AISI_steel_code_tables/: COMPORD-Tables-.xls  COMPORD-Tables-Proposed-for-Deletion-Tables.xls  Outside-Processing-Tables.xls  STLCDPID_10-30-19.xlsx  Shipping-and-Packaging-Tables.xls
data/ASM/: TableData13.csv  TableData27_1.csv  TableData7.csv  TableData9_1.csv  TableData9_2.csv  vol1_ams_alloy_steel_nominal_compositions_part2.csv  vol1_ams_alloy_steel_nominal_compositions_part3.csv  vol1_carbon_steel_compositions_bars_rods_tubing.csv  vol1_estimated_mechanical_properties_nonresulfurized_carbon_steel_bars_part3.csv  vol1_estimated_mechanical_properties_resulfurized_carbon_steel_bars.csv  vol1_minimum_mechanical_properties_martensitic_stainless_steels.csv  vol1_minimum_mechanical_properties_martensitic_stainless_steels_part2.csv  vol1_nominal_mechanical_properties_group_l_s_tool_steels.csv  vol1_sae_aisi_system_of_designations.csv  vol1_thermal_conductivities_carbon_and_low_alloy_steels.csv  vol1_thermal_conductivities_carbon_and_low_alloy_steels_part2.csv  vol1_typical_tensile_properties_annealed_type300_austenitic_stainless.csv  vol1_typical_tensile_properties_annealed_type300_austenitic_stainless_part2.csv  vol4_hardening_aging_treatments_hardnesses_maraging_steels.csv  vol4_hardening_and_tempering_of_tool_steels.csv  (+28 more)
literature_review/: literature_review.md
(+67 files in other folders)
